RESOLVED FIXED44095
[GTK] Fix wrapping of core Events in the bindings
https://bugs.webkit.org/show_bug.cgi?id=44095
Summary [GTK] Fix wrapping of core Events in the bindings
Xan Lopez
Reported 2010-08-17 02:32:58 PDT
We were mistakenly wrapping any Event or subclass as a WebKitDOMEvent, but we need to return the proper GObject type whenever appropriate (ie, a WebKitDOMMouseEvent for MouseEvent).
Attachments
wrapevents.diff (3.20 KB, patch)
2010-08-17 02:35 PDT, Xan Lopez
no flags
Xan Lopez
Comment 1 2010-08-17 02:35:10 PDT
Created attachment 64567 [details] wrapevents.diff Patch.
Gustavo Noronha (kov)
Comment 2 2010-08-17 05:16:35 PDT
Comment on attachment 64567 [details] wrapevents.diff OK!
Xan Lopez
Comment 3 2010-08-17 05:25:20 PDT
Comment on attachment 64567 [details] wrapevents.diff Landed in r65497.
Xan Lopez
Comment 4 2010-08-17 05:25:37 PDT
Closing bug.
Note You need to log in before you can comment on or make changes to this bug.