2010-08-17  Xan Lopez  <xlopez@igalia.com>

Reviewed by Gustavo Noronha.

        [GTK] Fix wrapping of core Events in the bindings
        https://bugs.webkit.org/show_bug.cgi?id=44095

        Return the proper GObject type instead of hardcoding
        WebKitDOMEvent for all Event types.

        * bindings/gobject/GObjectEventListener.cpp:
        (WebCore::GObjectEventListener::handleEvent):
        * bindings/gobject/WebKitDOMBinding.cpp:
        (WebKit::kit):

git-svn-id: svn://svn.chromium.org/blink/trunk@65497 bbb929c8-8fbe-4397-9dbb-9b2b20218538