third_party/WebKit/WebCore/bindings/gobject/GObjectEventListener.cpp
@@ -22,6 +22,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #include "Event.h"
 #include "EventListener.h"
+#include "webkit/WebKitDOMEvent.h"
 #include "webkit/WebKitDOMEventPrivate.h"
 #include <wtf/HashMap.h>
 #include <wtf/text/CString.h>
@@ -31,7 +32,7 @@ namespace WebCore {
 void GObjectEventListener::handleEvent(ScriptExecutionContext*, Event* event)
 {
     gboolean handled = FALSE;
-    WebKitDOMEvent* gobjectEvent = WebKit::wrapEvent(event);
+    WebKitDOMEvent* gobjectEvent = WEBKIT_DOM_EVENT(WebKit::kit(event));
     g_signal_emit_by_name(m_object, m_signalName.utf8().data(), gobjectEvent, &handled);
 }
 
