third_party/WebKit/WebCore/bindings/gobject/WebKitDOMBinding.cpp
@@ -33,6 +33,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "UIEvent.h"
 #include "WebKitDOMDOMWindowPrivate.h"
 #include "WebKitDOMElementPrivate.h"
+#include "WebKitDOMEventPrivate.h"
 #include "WebKitDOMNode.h"
 #include "WebKitDOMNodePrivate.h"
 #include "WebKitHTMLElementWrapperFactory.h"
@@ -141,7 +142,7 @@ gpointer kit(Event* event)
     else if (event->isUIEvent())
         wrappedEvent = wrapUIEvent(static_cast<UIEvent*>(event));
     else
-        wrappedEvent = 0;
+        wrappedEvent = wrapEvent(event);
 
     return DOMObjectCache::put(event, wrappedEvent);
 }
